<resources>
    <string name="app_name">GymClubb</string>

    <string name="recent_news">Da Nang International Fireworks Festival 2017</string>

    <string name="in_news">Da Nang International Fireworks Festival 2017Update: Dec 08, 2016 (TITC) - Da Nang International Fireworks Festival 2017 (DIFF 2017) with the theme “Shining Marble Mountains” will take place for two months, from 29 April to 24 June 2017 with the aim to Da Nang become a unique cultural festival tourism space. </string>

    <string name="publish_date">2017-04-30 12:13:14</string>
    <string name="string_chest">Chest</string>
    <string name="string_back">Back</string>
    <string name="string_shoulders">Shoulders</string>
    <string name="string_abs">Abs</string>
    <string name="string_legs">Legs</string>
    <string name="string_arms">Arms</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>